Clean-up, move workflow to feature
